--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+altgraph==0.17.4
+cx_Freeze==7.2.7
+cx_Logging==3.2.1
+lief==0.15.1
+packaging==24.2
+pefile==2023.2.7
 pygame==2.6.1
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2024.10
+pywin32-ctypes==0.2.3
+setuptools==75.6.0
